--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <p id="demo"> Saint Rose Of Lima</p>
     </div>     
     <div class="burger"></div>
-    <script src="/SaintWeb/SaintQuotes.js"></script>
+    <script src="SaintQuotes.js"></script>
     <script src="dates.js"></script>
 
     <div class="Section5Line"></div>
