--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>HisLight</title>
     <link rel="stylesheet" href="HisLight.css">
 </head>
-<link rel="shortcut icon" type="image/jpg" href="./lightbulb-regular.svg"/>
+<link rel="shortcut icon" type="image/jpg" href="./icons8-light-on-64.png"/>
 <body>
   <div class="dropdown">
     <div class="bar">
