--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h1 class="DailyV">DAILY VERSE</h1>
         </section>
     </div>
-    <h1 class="SubV">He said to them, “Go into all the world and preach the gospel to all creation." <br> Mark 16:15</h1>
+    <h1 class="SubV">Jesus said to him, “Rise, take up your mat, and walk.”‭‭ <br> John 5:8</h1>
     <textarea placeholder="Write What's On Your Heart!"></textarea>
     <div class="Section3Line"></div>
     <img src="bible.jpg" alt="" class="BiblePic">
