--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HisLight</title>
     <link rel="stylesheet" href="HisLight.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC">
 </head>
 <link rel="shortcut icon" type="image/jpg" href="./icons8-light-on-64.png"/>
 <body>
@@ -21,18 +22,9 @@
       <a href="#quotes">Saint Quotes</a>
       <a href="#feast">Feast Days</a>
       <a href="#MonthNov">Novenas</a>
+      <!-- <a href="#Commentary">Commentary</a> -->
     </div>
   </div>
- <!-- <div class="burger">
-    <a href="#home" class="active"></a>
-    <div id="myLinks">
-      <a href="#verse">Daily Verse</a>
-      <a href="#quotes">Saint Quotes</a>
-      <a href="#feast">Feast Days</a>
-      <a href="#MonthNov">Novenas</a>
-    </div>
-    <a href="javascript:void(0);" class="icon" onclick="BFunction()"></a>
-  </div> -->
 
     <a href="#verse" class="travel">Daily Verse</a>
     <a href="#quotes" class="travel2">Random Quote</a>
@@ -41,21 +33,22 @@
     </a>
     <a href="#feast" class="travel4">Feast Days</a>
     <a href="#MonthNov" class="travel5">Novenas</a>
-    <img src="Mary pic.jpg" alt="" class="StartPic">
-    <h1 class="Title">HIS LIGHT</h1>
+    <!-- <a href="#Commentary" class="travel6">Commentary</a> -->
+    <img src="Mary pic.jpg" alt="" id="StartPic" class="StartPic">
+    <h1 class="Title">His Light</h1>
     <div class="BackSection">
       <section id="back">
           <div class="BackTop"></div>
       </section>
   </div>
-    <h1 class="SubTitle">“I am the light of the world. Whoever follows me will not walk in darkness, but will have the light of life.” John 8:12</h1>
+    <h1 class="SubTitle">“I am the light of the world. Whoever follows me will not walk in darkness, but will have the light of life.” <br> John 8:12</h1>
     <div class="Section2Line"></div>
     <div class="DailyVerseSection">
         <section id="verse">
             <h1 class="DailyV">DAILY VERSE</h1>
         </section>
     </div>
-    <h1 class="SubV">Be still and know that I am God <br>Psalms 46:10</h1>
+    <h1 class="SubV">He said to them, “Go into all the world and preach the gospel to all creation." <br> Mark 16:15</h1>
     <textarea placeholder="Write What's On Your Heart!"></textarea>
     <div class="Section3Line"></div>
     <img src="bible.jpg" alt="" class="BiblePic">
@@ -100,13 +93,13 @@
       <p id="demo"> Saint Rose Of Lima</p>
     </div>     
     <div class="burger"></div>
-    <script src="SaintQuotes.js"></script>
+    <script src="/SaintWeb/SaintQuotes.js"></script>
     <script src="dates.js"></script>
 
     <div class="Section5Line"></div>
     <img class="cross" src="jesus crucified.jpeg" alt="">
     <h1 id="Novena1" class="Novena1">Holy Cross Novena <br> September 5 - September 14</h1>
-    <h1 id="Novena1A" class="Novena1A">Day 6</h1>
+    <h1 id="Novena1A" class="Novena1A">Day 7</h1>
     <h1 id="Novena1sub" class="Novena1sub">Feast Day <br> September 14</h1>
     <h1 id="Novena1subA" class="Novena1subA">In the name of the Father, and of the Son, and of the Holy Spirit. Amen. Jesus, Who because of Your burning love for us willed to be crucified and to shed Your Most Precious Blood for the redemption and salvation of our souls, <br> look down upon us and grant the petition we ask for… <br> (Mention your request here…) <br> We trust completely in Your Mercy. Cleanse us from sin by Your Grace, sanctify our work, <br> give us and all those who are dear to us our daily bread, lighten the burden of our sufferings, bless our families, and grant to the nations, so sorely afflicted, Your Peace, which is the only true peace, so that by obeying Your Commandments we may come at last to the glory of Heaven. Amen. <br> Say 1: Our Father…  Say 1: Hail Mary… Say 1: Glory Be…</h1>
     <button onclick="Nfunction()" id="NPrayer" class="Novena1Button">Pray</button> 
@@ -115,7 +108,7 @@
 
     <img id="sorrow" class="sorrow" src="sorrowful Mary.jpg" alt="">
     <h1 id="Novena2" class="Novena2">Sorrowful Mary Novena <br> September 6 - September 15 </h1>
-    <h1 id="Novena2A" class="Novena2A">Day 5</h1>
+    <h1 id="Novena2A" class="Novena2A">Day 6</h1>
     <h1 id="Novena2sub" class="Novena2sub">Feast Day<br> September 15</h1>  
     <h1 id="Novena2subA" class="Novena2subA">In the name of the Father, and of the Son, and of the Holy Spirit. Amen. O sorrowful Mother, I turn to you in total trust. <br> You suffered the sharpest pains in life, watching your Son die upon the Cross, and yet you remained by Him to the end. <br> Look with favor upon me, a poor sinner, and obtain for me from your Son all the graces I need to endure the sufferings God allows me to face. <br> Daily Prayer - <br> On the Cross her Son was dying. Mary stood beneath Him crying, Sharing in His saving cross. As He hangs, her soul is grieving, and a sword her heart is cleaving and she weeps the bitter loss. O Mother of Sorrows, through thy First Sorrow, the Prophecy of Holy Simeon, intercede for me with the Sacred Heart of Jesus, and grant me the favor I implore <br> (mention your request here…) <br> Say 1: Our Father…  Say 1: Hail Mary… Say 1: Glory Be…</h1>  
     <button onclick="Sfunction()" id="N2Prayer" class="Novena2Button">Pray</button> 
@@ -124,6 +117,17 @@
           <h1 class="MonthlyNovenas">September Novena's</h1>
       </section>
   </div>
+
+  <!--
+  <div class="Section7line"></div>
+  <img src="Jesus turns water into wine vector image on VectorStock.jpg" class="wine" alt="">
+  <div class="CommentarySection">
+    <section id="Commentary">
+        <h1 class="CommentaryTitle">COMMENTARY</h1>
+    </section>
+</div> -->
+
+
 </body>
 </html>
 
