--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <button onclick="N2function()" id="N2Button" class="Novena2Button">Pray</button> 
     <div class="NovenaSection">
       <section id="MonthNov">
-          <h1 class="MonthlyNovenas">September Novena's</h1>
+          <h1 class="MonthlyNovenas">Featured Novena's</h1>
       </section>
   </div>
 
