--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h1 class="DailyV">DAILY VERSE</h1>
         </section>
     </div>
-    <h1 class="SubV">"Are not five sparrows sold for two pennies? Yet not one of them is forgotten by God. Indeed, the very hairs of your head are all numbered. Don’t be afraid; you are worth more than many sparrows." <br> Luke 12:6-7</h1>
+    <h1 class="SubV">"It will not be so among you; but whoever wishes to be great among you must be your servant, and whoever wishes to be first among you must be your slave." <br> Matthew 20:26-27</h1>
     <textarea placeholder="Write What's On Your Heart!"></textarea>
     <div class="Section3Line"></div>
     <img src="bible.jpg" alt="" class="BiblePic">
