--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
       <a href="#quotes">Saint Quotes</a>
       <a href="#feast">Feast Days</a>
       <a href="#MonthNov">Novenas</a>
-      <!-- <a href="#Commentary">Commentary</a> -->
+      <a href="#Commentary">Commentary</a>
     </div>
   </div>
 
+  <div class="navBarLinks">
     <a href="#verse" class="travel">Daily Verse</a>
     <a href="#quotes" class="travel2">Saint Quotes</a>
     <a href="#back" class="travel3">
@@ -33,8 +34,17 @@
     </a>
     <a href="#feast" class="travel4">Feast Days</a>
     <a href="#MonthNov" class="travel5">Novenas</a>
-    <!-- <a href="#Commentary" class="travel6">Commentary</a> -->
-    <img src="Mary pic.jpg" alt="" id="StartPic" class="StartPic">
+    <a href="#Commentary" class="travel6">Commentary</a>
+  </div>
+
+  <div class="LINES">
+    <div class="navLine"></div>
+    <div class="navLine2"></div>
+    <div class="navLine3"></div>
+    <div class="navLine4"></div>
+  </div>
+
+    <img src="./homepageImages/Mary pic.jpg" alt="" id="StartPic" class="StartPic">
     <h1 class="Title">His Light</h1>
     <div class="BackSection">
       <section id="back">
@@ -51,13 +61,13 @@
     <h1 class="SubV">"It will not be so among you; but whoever wishes to be great among you must be your servant, and whoever wishes to be first among you must be your slave." <br> Matthew 20:26-27</h1>
     <textarea placeholder="Write What's On Your Heart!"></textarea>
     <div class="Section3Line"></div>
-    <img src="bible.jpg" alt="" class="BiblePic">
+    <img src="./homepageImages/bible.jpg" alt="" class="BiblePic">
     <div class="QuoteSection">
         <section id="quotes">
             <h1 class="RQuotes">SAINT QUOTES</h1>
         </section>
     </div>
-    <img src="church.jpg" class="church">
+    <img src="./homepageImages/church.jpg" class="church">
 
     <div class="container">
       
@@ -79,7 +89,7 @@
         </div>
     
       </div>
-    <img class="Eucharist" src="Eucharist2.jpg">
+    <img class="Eucharist" src="./homepageImages/Eucharist2.jpg">
     <div class="FeastSection">
         <section id="feast">
             <h1 class="FeastTitle">FEAST DAYS</h1>
@@ -97,7 +107,7 @@
 
 
     <div class="Section5Line"></div>
-    <img id="novena1Pic" class="novena1Pic" src="jesus crucified.jpeg" alt="image">
+    <img id="novena1Pic" class="novena1Pic" src="./novenaImages/jesus crucified.jpeg" alt="image">
     <h1 id="Novena1" class="Novena1">Holy Cross Novena <br> September 5 - September 14</h1>
     <h1 id="Novena1A" class="Novena1A">Day 7</h1>
     <h1 id="Novena1sub" class="Novena1sub">Feast Day <br> September 14</h1>
@@ -106,7 +116,7 @@
 
     <div class="Section6Line"></div>
 
-    <img id="novena2Pic" class="novena2Pic" src="sorrowful Mary.jpg" alt="image">
+    <img id="novena2Pic" class="novena2Pic" src="./novenaImages/sorrowful Mary.jpg" alt="image">
     <h1 id="Novena2" class="Novena2">Sorrowful Mary Novena <br> September 6 - September 15 </h1>
     <h1 id="Novena2A" class="Novena2A">Day 6</h1>
     <h1 id="Novena2sub" class="Novena2sub">Feast Day<br> September 15</h1>  
@@ -120,7 +130,7 @@
       </section>
   </div>
 
-  <img id="novena3Pic" class="novena3Pic" src="Therese.jpg" alt="image">
+  <img id="novena3Pic" class="novena3Pic" src="./novenaImages/Therese.jpg" alt="image">
   <h1 id="Novena3" class="Novena3">St. Therese Novena <br> September 23 - October 1 </h1>
   <h1 id="Novena3A" class="Novena3A">Day 1</h1>
   <h1 id="Novena3sub" class="Novena3sub">Feast Day<br> October 1</h1> 
@@ -133,14 +143,58 @@
     <button onclick="switchToN3()" id="thirdDotButton" class="thirdDotButton"></button>
   </div>
 
-  <!--
+  
   <div class="Section7line"></div>
-  <img src="Jesus turns water into wine vector image on VectorStock.jpg" class="wine" alt="">
   <div class="CommentarySection">
     <section id="Commentary">
         <h1 class="CommentaryTitle">COMMENTARY</h1>
     </section>
-</div> -->
+  </div>
+
+  <div class="weddingCard">
+    <img src="./homepageImages/weddingatcana.jpg" class="wine" alt="">
+    <a href="./weddingAtCana.html">
+      <div class="hoverEffect">
+        <h1 class="weddingText">Wedding At Cana <br> John 2: 1 - 11</h1>
+      </div>
+    </a>
+  </div>
+
+  <div class="feeding5000Card">
+    <img src="./homepageImages/feeding5000.jpg" class="feeding5000" alt="">
+    <div class="hoverEffect5000">
+      <h1 class="feedingText">Feeding The 4000 <br> Matthew 15: 29 - 39</h1>
+    </div>
+  </div>
+
+  <div class="bartimaeusCard">
+    <img src="./homepageImages/bartimaeus.jpeg" class="bartimaeus" alt="">
+    <div class="hoverEffectbart">
+      <h1 class="bartText">Bartimaeus <br> Mark 10: 46 - 52</h1>
+    </div>
+  </div>
+
+  <div class="womanAtWellCard">
+    <img src="./homepageImages/womanWell.jpeg" class="womanAtWell" alt="">
+    <div class="hoverEffectWell">
+      <h1 class="wellText">Woman At The Well <br> John 4: 1 - 42</h1>
+    </div>
+  </div>
+
+  <div class="lastSupperCard">
+    <img src="./homepageImages/thelastsupper.webp" class="lastSupper" alt="">
+    <div class="hoverEffectSupper">
+      <h1 class="supperText">The Last Supper <br> Matthew 26: 17 - 30</h1>
+    </div>
+  </div>
+
+  <div class="lazurusCard">
+    <img src="./homepageImages/Lazarus.webp" class="lazurus" alt="">
+    <div class="hoverEffectLazurus">
+      <h1 class="lazurusText">Raising Lazurus <br> John 11: 1 - 44</h1>
+    </div>
+  </div>
+
 <script src="SaintQuotes.js"></script>
 <script src="dates.js"></script>
 <script src="HisLight.js"></script>
@@ -158,12 +212,11 @@
 <div class="verseBox"></div>
 <div class="saintBox"></div>
 <div class="feastBox"></div>
+<div class="novenaBox"></div>
+<div class="commentaryBox"></div>
 <!-- <button href="#verse" class="heroButtonVerse">Daily Verse</button> -->
 
-
-
-
-</body>
+<svg class="Wave1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill-opacity="1" d="M0,256L34.3,245.3C68.6,235,137,213,206,202.7C274.3,192,343,192,411,181.3C480,171,549,149,617,149.3C685.7,149,754,171,823,186.7C891.4,203,960,213,1029,202.7C1097.1,192,1166,160,1234,160C1302.9,160,1371,192,1406,208L1440,224L1440,0L1405.7,0C1371.4,0,1303,0,1234,0C1165.7,0,1097,0,1029,0C960,0,891,0,823,0C754.3,0,686,0,617,0C548.6,0,480,0,411,0C342.9,0,274,0,206,0C137.1,0,69,0,34,0L0,0Z"></path></svg></body>
 </html>
 
 
