fixed home page mobile

--- a/index.html
+++ b/index.html
@@ -151,49 +151,57 @@
     </section>
   </div>
 
-  <div class="weddingCard">
-    <img src="./homepageImages/weddingatcana.jpg" class="wine" alt="">
-    <a href="./weddingAtCana.html">
-      <div class="hoverEffect">
-        <h1 class="weddingText">Wedding At Cana <br> John 2: 1 - 11</h1>
+  <div class="bibleCards">
+
+    <div class="weddingCard">
+      <section class="bibleCards">
+        <img src="./homepageImages/weddingatcana.jpg" class="wine" alt="">
+        <a href="./weddingAtCana.html">
+          <div class="hoverEffect">
+            <h1 class="weddingText">Wedding At Cana <br> John 2: 1 - 11</h1>
+          </div>
+        </a>
+      </section>
+    </div>
+
+    <div class="feeding5000Card">
+      <section class="bibleCards">
+        <img src="./homepageImages/feeding5000.jpg" class="feeding5000" alt="">
+        <div class="hoverEffect5000">
+          <h1 class="feedingText">Feeding The 4000 <br> Matthew 15: 29 - 39</h1>
+        </div>
+      </section>
+    </div>
+
+    <div class="bartimaeusCard">
+      <img src="./homepageImages/bartimaeus.jpeg" class="bartimaeus" alt="">
+      <div class="hoverEffectbart">
+        <h1 class="bartText">Bartimaeus <br> Mark 10: 46 - 52</h1>
       </div>
-    </a>
-  </div>
-
-  <div class="feeding5000Card">
-    <img src="./homepageImages/feeding5000.jpg" class="feeding5000" alt="">
-    <div class="hoverEffect5000">
-      <h1 class="feedingText">Feeding The 4000 <br> Matthew 15: 29 - 39</h1>
     </div>
-  </div>
 
-  <div class="bartimaeusCard">
-    <img src="./homepageImages/bartimaeus.jpeg" class="bartimaeus" alt="">
-    <div class="hoverEffectbart">
-      <h1 class="bartText">Bartimaeus <br> Mark 10: 46 - 52</h1>
+    <div class="womanAtWellCard">
+      <img src="./homepageImages/womanWell.jpeg" class="womanAtWell" alt="">
+      <div class="hoverEffectWell">
+        <h1 class="wellText">Woman At The Well <br> John 4: 1 - 42</h1>
+      </div>
     </div>
-  </div>
 
-  <div class="womanAtWellCard">
-    <img src="./homepageImages/womanWell.jpeg" class="womanAtWell" alt="">
-    <div class="hoverEffectWell">
-      <h1 class="wellText">Woman At The Well <br> John 4: 1 - 42</h1>
+    <div class="lastSupperCard">
+      <img src="./homepageImages/thelastsupper.webp" class="lastSupper" alt="">
+      <div class="hoverEffectSupper">
+        <h1 class="supperText">The Last Supper <br> Matthew 26: 17 - 30</h1>
+      </div>
     </div>
-  </div>
 
-  <div class="lastSupperCard">
-    <img src="./homepageImages/thelastsupper.webp" class="lastSupper" alt="">
-    <div class="hoverEffectSupper">
-      <h1 class="supperText">The Last Supper <br> Matthew 26: 17 - 30</h1>
+    <div class="lazurusCard">
+      <img src="./homepageImages/Lazarus.webp" class="lazurus" alt="">
+      <div class="hoverEffectLazurus">
+        <h1 class="lazurusText">Raising Lazurus <br> John 11: 1 - 44</h1>
+      </div>
     </div>
-  </div>
 
-  <div class="lazurusCard">
-    <img src="./homepageImages/Lazarus.webp" class="lazurus" alt="">
-    <div class="hoverEffectLazurus">
-      <h1 class="lazurusText">Raising Lazurus <br> John 11: 1 - 44</h1>
-    </div>
-  </div>
+</div>
 
 <script src="SaintQuotes.js"></script>
 <script src="dates.js"></script>
