fixed the daily verse

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <h1 class="DailyV">DAILY VERSE</h1>
         </section>
     </div>
-    <h1 class="SubV">"It will not be so among you; but whoever wishes to be great among you must be your servant, and whoever wishes to be first among you must be your slave." <br> Matthew 20:26-27</h1>
+    <h1 id="SubV" class="SubV"></h1>
     <textarea placeholder="Write What's On Your Heart!"></textarea>
     <div class="Section3Line"></div>
     <img src="./homepageImages/bible.jpg" alt="" class="BiblePic">
