--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     </section>
   </div>
 
-  <div class="bibleCards">
+  <!-- <div class="bibleCards">
 
     <div class="weddingCard">
       <section class="bibleCards">
@@ -201,7 +201,22 @@
       </div>
     </div>
 
+</div> -->
+
+<div class="bibleContainer">
+  <div class="bibleContent">
+    <img src="./homepageImages/Feeding 5000 (1).png">
+    <img src="./homepageImages/Bartimous.png">
+    <a href="./weddingAtCana.html">
+      <img src="./homepageImages/Wedding at Cana.png">
+    </a>
+    <img src="./homepageImages/Raising Lazurus (4).png">
+    <img src="./homepageImages/The last supper.png">
+  </div>
 </div>
+
+<h1 class="gospelOfMatthew">Gospel Of Matthew</h1>
+<div class="gospelLine"></div>
 
 <script src="SaintQuotes.js"></script>
 <script src="dates.js"></script>
